# maelstrom

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/workflows/: build-linux.yml  build-macos.yml  ci.yml  cli-binaries.yml  demo-loadtest.yml  docker-cli.yml  k8s-loadtest.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: streams_gate.rs
community/: DISTRIBUTION.md  README.md  release.yml
core/: Cargo.toml
core/src/: awssig.rs  dynval.rs  histogram.rs  lib.rs  multipart.rs  oauth.rs  redact.rs  report.rs  scenario.rs  streams.rs  tls.rs  types.rs  ws.rs
core/tests/: engine.rs  refresher_cancel.rs  streams.rs
db/: Cargo.toml
db/src/: lib.rs
deploy/k8s-demo/: loadtest-job.yaml  mock.yaml  scenario.json
examples/demo-api/: .gitignore
grpc/: Cargo.toml  build.rs
grpc/examples/: greeter_server.rs
grpc/src/: codec.rs  invoke.rs  lib.rs
grpc/tests/: greeter.proto  integration.rs
previews/: interface-preview.html  load-report-example.html
samples/: jsonplaceholder-openapi.yaml
src/: App.flow.test.tsx  App.tsx  api.ts  assertions.test.ts  assertions.ts  charts.test.ts  charts.ts  cliExport.test.ts  cliExport.ts  config.ts  exportConfig.test.ts  i18n.tsx  main.tsx  openapi.test.ts  openapi.ts  report.test.ts  report.ts  requestBuilder.test.ts  requestBuilder.ts  streamsBuilder.test.ts  streamsBuilder.ts  styles.css  types.test.ts  types.ts  vars.test.ts  vars.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  grpc.rs  http_client.rs  lib.rs  loadtest.rs  log.rs  main.rs  oauth.rs  scenario.rs  storage.rs  streams.rs  tls.rs  ws.rs
src/components/: AssertionsEditor.tsx  AuthEditor.tsx  DatasetsModal.tsx  DbResultView.tsx  EnvironmentModal.tsx  ExportConfigModal.tsx  GrpcEditor.tsx  GrpcResultView.tsx  KeyValueEditor.tsx  LoadTestPanel.tsx  LogModal.tsx  MultipartEditor.tsx  RequestEditor.tsx  ResponseView.tsx  ScenarioPanel.test.tsx  ScenarioPanel.tsx  Sidebar.tsx  StreamsPanel.tsx  TlsEditor.tsx  WsEditor.tsx  WsResultView.tsx
src/locale/: ru.ts
testdata/: README.md  ci-scenario.json  mock-openapi.yaml  mock-server.mjs  people.csv  products.json  sample.db
testdata/certs/: generate.sh
