[package]
name = "maelstrom-core"
version = "0.3.0"
edition = "2021"
description = "Maelstrom load-testing engine — shared by the desktop app and the headless CLI"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots", "json", "gzip", "brotli", "deflate", "http2", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
hdrhistogram = "7"
chrono = "0.4"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
regex = "1"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
