[package]
name = "maelstrom-app"
version = "0.4.0"
description = "Maelstrom — API client with load testing"
edition = "2021"

[lib]
name = "maelstrom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
maelstrom-core = { path = "../core" }
maelstrom-db = { path = "../db" }
maelstrom-grpc = { path = "../grpc" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots", "json", "gzip", "brotli", "deflate", "cookies", "http2", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = "0.7"
hdrhistogram = "7"
chrono = "0.4"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2"

[dev-dependencies]
# net + io-util for the in-process mock HTTP server in loadtest tests
tokio = { version = "1", features = ["full"] }
